# clash-systolic-arrays

./: LICENSE  README.md  matricesx.cabal
src/: Main.hs
src/Clash/Blog/MM/: Main.hs  Zip45.hs
