name:                 matricesx
version:              0.99
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Martijn Bastiaan
maintainer:           martijn@qbaylogic.com
category:
build-type:           Simple
cabal-version:        >=1.18

executable matrices
  main-is:            Main.hs
  ghc-options:        -O1
                      -fplugin=GHC.TypeLits.Extra.Solver
                      -fplugin=GHC.TypeLits.Normalise
                      -fplugin=GHC.TypeLits.KnownNat.Solver
                      -fconstraint-solver-iterations=100
                      -rtsopts

  hs-source-dirs:     src
  default-language:   Haskell2010
  other-modules:      Clash.Blog.MM.Main
                      Clash.Blog.MM.Zip45

  default-extensions: BinaryLiterals
                      ConstraintKinds
                      DataKinds
                      DeriveLift
                      ExplicitForAll
                      ExplicitNamespaces
                      FlexibleContexts
                      KindSignatures
                      MagicHash
                      MonoLocalBinds
                      NoImplicitPrelude
                      ScopedTypeVariables
                      TemplateHaskell
                      TemplateHaskellQuotes
                      TypeApplications
                      TypeFamilies
                      TypeOperators

  Build-depends:      base                      >= 4.11.0.0 && < 5,
                      clash-prelude             >= 0.99,
                      ghc-typelits-extra        >= 0.2.1   && < 0.3,
                      ghc-typelits-knownnat     >= 0.2.2   && < 0.5,
                      ghc-typelits-natnormalise >= 0.4.2   && < 0.6,

                      containers,
                      deepseq,
                      singletons,
                      text

